# rust-chat-server

./: Cargo.toml  GNUmakefile  build.rs
server/: Cargo.toml
src/: main.rs
src/server/resources/: chat_rooms_metadatas.json
src/server/src/: main.rs
src/state_store/: state_store.rs
src/ui_management/pages/chat_page/: chat_page.rs
src/ui_management/pages/chat_page/components/: room_list.rs
src/ui_management/pages/connect_page/: connect_page.rs
tui/: Cargo.toml  GNUmakefile
tui/src/chat/: Cargo.toml
tui/src/ui_management/pages/connect_page/: connect_page.rs
